[gd_scene load_steps=6 format=3 uid="uid://dkdixuadv3iro"]

[ext_resource type="Script" path="res://Scripts/SceneScripts/option_menu.gd" id="1_77kfo"]
[ext_resource type="FontFile" uid="uid://jfimmo8g34rh" path="res://Assets/Resource/VCR_OSD_MONO_1.001.ttf" id="1_yaawo"]
[ext_resource type="Script" path="res://Scripts/ComponentScripts/BGMSlider.gd" id="5_am5qd"]
[ext_resource type="Script" path="res://Scripts/ComponentScripts/SFXSlider.gd" id="6_jn3ow"]
[ext_resource type="Texture2D" uid="uid://up8d1hwax0f6" path="res://Assets/Sprites/MainMenu Background.png" id="7_vng2k"]

[node name="OptionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_77kfo")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.127
anchor_right = 0.5
anchor_bottom = 0.127
offset_left = -97.0001
offset_top = -23.4401
offset_right = 106.0
offset_bottom = 23.5599
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_yaawo")
theme_override_font_sizes/font_size = 50
text = "OPTIONS"

[node name="KrampusLogo" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.602344
anchor_top = 0.386111
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("7_vng2k")
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"OptionPanel"
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "BGM"

[node name="BGMButton" type="Button" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_type_variation = &"SoundButton"
toggle_mode = true

[node name="BGMSlider" type="HSlider" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"VolumeSlider"
script = ExtResource("5_am5qd")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SFX"

[node name="SFXButton" type="Button" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_type_variation = &"SoundButton"
toggle_mode = true

[node name="SFXSlider" type="HSlider" parent="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_type_variation = &"VolumeSlider"
script = ExtResource("6_jn3ow")
metadata/_edit_use_anchors_ = true

[node name="BackButton" type="Button" parent="ColorRect"]
custom_minimum_size = Vector2(210, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.868
anchor_right = 0.5
anchor_bottom = 0.868
offset_left = -105.0
offset_top = -24.96
offset_right = 105.0
offset_bottom = 25.04
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "BACK"
metadata/_edit_use_anchors_ = true

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="toggled" from="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/BGMButton" to="." method="_on_bgm_button_toggled"]
[connection signal="tree_exiting" from="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/BGMSlider" to="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/BGMSlider" method="_on_tree_exiting"]
[connection signal="value_changed" from="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/BGMSlider" to="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/BGMSlider" method="_on_value_changed"]
[connection signal="toggled" from="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/SFXButton" to="." method="_on_sfx_button_toggled"]
[connection signal="tree_exiting" from="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/SFXSlider" to="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/SFXSlider" method="_on_tree_exiting"]
[connection signal="value_changed" from="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/SFXSlider" to="ColorRect/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/SFXSlider" method="_on_value_changed"]
[connection signal="pressed" from="ColorRect/BackButton" to="." method="_on_back_button_pressed"]
